resolved some issues
commit2

--- a/src/components/Offers/national-packages/NationalPackages.css
+++ b/src/components/Offers/national-packages/NationalPackages.css
@@ -87,7 +87,7 @@
   padding: 5px;
 }
 
-.button {
+.national-btn {
   color: #01959a;
   font-size: 20px;
   font-weight: bold;
@@ -102,7 +102,7 @@
   padding: 5px;
 }
 
-.button:hover {
+.national-btn:hover {
   color: white;
   background-color: #01959a;
 }
