--- a/src/components/BestSellingPacakage/Carouselnew.css
+++ b/src/components/BestSellingPacakage/Carouselnew.css
@@ -96,7 +96,7 @@ h5 {
   font-size: 12px;
 }
 
-.card-name {
+.package-btn {
   color: #01959a;
   font-size: 20px;
   font-weight: bold;
@@ -111,7 +111,7 @@ h5 {
   padding: 5px;
 }
 
-.card-name:hover {
+.package-btn:hover {
   color: white;
   background-color: #01959a;
 }
