--- a/src/components/BookPacakage/EuropePackage.css
+++ b/src/components/BookPacakage/EuropePackage.css
@@ -1,9 +1,4 @@
-.package-title1 {
-  margin-top: 10% !important;
-  text-align: center;
-}
-
-.package-details-btn1 {
+.book-now-btn1 {
   padding: 10px;
   margin: 10px;
   display: flex;
@@ -11,17 +6,18 @@
   align-items: center;
 }
 
-.package-details-btn {
+.book-now-btn {
   padding: 10px;
   margin: 10px;
   font-size: 20px;
   font-weight: 600;
   border: 2px solid #01959a;
+  border-radius: 5px;
   background-color: white;
   color: #01959a;
 }
 
-.package-details-btn:hover {
+.book-now-btn:hover {
   border: 2px solid #01959a;
   background-color: #01959a;
   color: white;
