--- a/src/components/Offers/international-packages/InternationalPackages.css
+++ b/src/components/Offers/international-packages/InternationalPackages.css
@@ -82,7 +82,7 @@
   padding: 5px;
 }
 
-.button {
+.international-btn {
   color: #01959a;
   font-size: 20px;
   font-weight: bold;
@@ -97,7 +97,7 @@
   padding: 5px;
 }
 
-.button:hover {
+.international-btn:hover {
   color: white;
   background-color: #01959a;
 }
