--- a/src/components/SearchTab/BookPacakageCondition.css
+++ b/src/components/SearchTab/BookPacakageCondition.css
@@ -3,7 +3,7 @@
   text-align: center;
 }
 
-.package-details-btn1 {
+.package-details {
   padding: 10px;
   margin: 10px;
   display: flex;
@@ -11,17 +11,26 @@
   align-items: center;
 }
 
-.package-details-btn {
+.book-now-btn1 {
+  padding: 10px;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.book-now-btn {
   padding: 10px;
   margin: 10px;
   font-size: 20px;
   font-weight: 600;
   border: 2px solid #01959a;
+  border-radius: 5px;
   background-color: white;
   color: #01959a;
 }
 
-.package-details-btn:hover {
+.book-now-btn:hover {
   border: 2px solid #01959a;
   background-color: #01959a;
   color: white;
