--- a/src/components/navbarCart/Navbar3.css
+++ b/src/components/navbarCart/Navbar3.css
@@ -67,20 +67,19 @@
 
 .theme-image {
   width: 100%;
-  height: 288px;
-  margin-bottom: 10px;
+  height: 100%;
+  /* margin-bottom: 10px; */
   object-fit: cover;
   border-radius: 5px;
   position: relative;
 }
 
-.card-name {
-  color: #01959a;
+.theme-btn {
+  color: white;
   font-size: 20px;
   font-weight: bold;
-  /* border: 2px solid #01959a; */
   position: absolute;
-  top: 90%;
+  top: 9%;
   left: 50%;
   z-index: 2;
   transform: translate(-50%, -50%);
@@ -89,7 +88,7 @@
   padding: 5px;
 }
 
-.card-name:hover {
+.theme-btn:hover {
   color: white;
   background-color: #01959a;
 }
