--- a/src/components/second-navbar/NavbarList.css
+++ b/src/components/second-navbar/NavbarList.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #007bff;
+  background-color: #01959a;
   align-items: center;
   border-radius: 10px;
   position: fixed;
